[package]
name = "passes"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "passes"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
num-traits = "0.2.15"
solana-program = "1.17.7"

[dev-dependencies]
solana-program-test = "1.17.6"
assert_matches = "1.5.0"
bonfida-test-utils = "0.4.0"
spl-token = "4.0.0"
solana-sdk = "1.17.6"
maplit = "1.0.2"
solana-client = "1.17.7"
